working on the deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Deji98.github.io",
+  "homepage": "https://Deji98.github.io/Home",
   "name": "home-app",
   "version": "0.1.0",
   "private": true,
